[iOS] Fix TabStrip PopupMenu on launch

This CL makes sure that the PopupMenu displayed on the TabGrid button in
the TabStrip has a correct positioning on the first launch of the app.

Bug: 876982
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs
Change-Id: I5eb288baae93ce9df8e5e7fc5f21f4eb3c4b7060
Reviewed-on: https://chromium-review.googlesource.com/1199045
Reviewed-by: Mark Cogan <marq@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588009}
Former-commit-id: b44216ef90dfe6d5edd4aab1bf547ec7772f9e62